refactor: Move linkToken api parameter into separate declaration.
